# mypet-tui

./: AGENTS.md  Cargo.toml  WORKPLAN.md
brain/architecture/: animation-system.md  data-flow.md  state-management.md
brain/decisions/: 001-ratatui-framework.md  002-animation-approach.md  003-save-format.md  004-egg-stage-design.md
brain/phases/: phase-01-foundation.md  phase-02-pet-system.md  phase-03-interactions.md  phase-04-game-loop.md  phase-05-animation.md  phase-06-persistence.md  phase-07-extras.md
brain/progress/: completed-tasks.md
brain/reference/: ascii-art-resources.md  ratatui-patterns.md  rust-tips.md
src/: app.rs  events.rs  main.rs  pet.rs  stats.rs  tui.rs  ui.rs
src/animation/: engine.rs  frame.rs  loader.rs  mod.rs  types.rs
src/widgets/: animated_pet.rs  mod.rs
