[package]
name = "mypet-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
